examples/good/7-correct-let.afl
main :: Int;

Let main = (let y::Int be defined as (3) in (2));