examples/bad/7-overshadowing.afl
main :: Int ;

Let main = (let x::Int be defined as (1) in (let x::Int be defined as (2) in (x))) ;